[add] firebase and configured google service

--- a/app.json
+++ b/app.json
@@ -26,10 +26,14 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "pinacotapp.victorlpgazolli.dev"
+      "package": "pinacotapp.victorlpgazolli.dev",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
-    }
+    },
+    "plugins": [
+      "@react-native-google-signin/google-signin"
+    ]
   }
 }
